# paint-with-words-sd

./: .env.example  .gitignore  .gitmodules  README.md  change_model_path.py  gradio_pww.py  gradio_pww_inpaint.py  pyproject.toml  requirements.txt  runner.py  runner_inpaint.py  runner_repaint.py  setup.py
contents/: paint_with_words.ipynb
contents/notebooks/: paint_with_words_textual_inversion.ipynb
paint_with_words/: __init__.py  paint_with_words.py  paint_with_words_inpaint.py  paint_with_words_repaint.py  utils.py
paint_with_words/helper/: aliases.py  images.py
paint_with_words/models/: attention.py
paint_with_words/pipelines/: __init__.py  paint_with_words_pipeline.py
tests/pipelines/: paint_with_words_pipeline_test.py
